[package]
name = "system-parachains-constants"
description = "Common constants for System Parachains runtimes"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smallvec = { workspace = true }

frame-support = { workspace = true }
parachains-common = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
paseo-runtime-constants = { workspace = true, default-features = false }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"parachains-common/std",
	"paseo-runtime-constants/std",
	"polkadot-core-primitives/std",
	"polkadot-primitives/std",
	"sp-core/std",
	"sp-runtime/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"paseo-runtime-constants/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
