[package]
name = "paseo-system-emulated-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Polkadot System emulated network"
publish = false

[dependencies]

# Cumulus
emulated-integration-tests-common = { workspace = true }

# Runtimes
asset-hub-paseo-emulated-chain = { workspace = true }
bridge-hub-paseo-emulated-chain = { workspace = true }
collectives-paseo-emulated-chain = { workspace = true }
coretime-paseo-emulated-chain = { workspace = true }
penpal-emulated-chain = { workspace = true }
paseo-emulated-chain = { workspace = true }
people-paseo-emulated-chain = { workspace = true }

[features]
runtime-benchmarks = [
	"asset-hub-paseo-emulated-chain/runtime-benchmarks",
	"bridge-hub-paseo-emulated-chain/runtime-benchmarks",
	"collectives-paseo-emulated-chain/runtime-benchmarks",
	"coretime-paseo-emulated-chain/runtime-benchmarks",
	"paseo-emulated-chain/runtime-benchmarks",
	"penpal-emulated-chain/runtime-benchmarks",
	"people-paseo-emulated-chain/runtime-benchmarks",
]
try-runtime = []
