[package]
name = "asset-hub-paseo-emulated-chain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "Asset Hub Paseo emulated chain used for integration tests"
publish = false

[dependencies]

# Substrate
sp-core = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }

# Cumulus
parachains-common = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }
emulated-integration-tests-common = { workspace = true }
xcm = { workspace = true, default-features = true }
polkadot-parachain-primitives = { workspace = true }

# Runtimes
asset-hub-paseo-runtime = { workspace = true, default-features = true }
paseo-emulated-chain = { workspace = true, default-features = true }
penpal-emulated-chain = {workspace = true, default-features = true}
