[package]
name = "people-paseo-emulated-chain"
authors.workspace = true
edition.workspace = true
version.workspace = true
license = "Apache-2.0"
description = "People Paseo emulated chain used for integration tests"
publish = false

[dependencies]

# Substrate
sp-core = { workspace = true, default-features = true }
frame-support = { workspace = true, default-features = true }

# Cumulus
parachains-common = { workspace = true, default-features = true }
cumulus-primitives-core = { workspace = true, default-features = true }
emulated-integration-tests-common = { workspace = true }

# Runtimes
paseo-runtime-constants = { workspace = true, default-features = true }

# Local
people-paseo-runtime = { workspace = true }
paseo-emulated-chain = { workspace = true }

[features]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"people-paseo-runtime/runtime-benchmarks",
	"paseo-emulated-chain/runtime-benchmarks",
	"paseo-runtime-constants/runtime-benchmarks",
]
